fix: Temperature text overflowing fixed.

--- a/src/App.css
+++ b/src/App.css
@@ -233,7 +233,7 @@
   }
 
   .temperature-text {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
   .condition-text {
